<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/introducir_comensales_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextComensales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_semibold"
        android:hint="@string/numero_de_comensales_hint"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textCapacidadMesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/capacidad_mesa_placeholder"
        android:textSize="16sp" />

</LinearLayout>