<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogProductTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:gravity="center_horizontal"
        android:text="Seleccionar Productos"
        android:textColor="#000000"
        android:textSize="40dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAvailableProducts"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:listitem="@layout/item_productos_disponibles" />

        <View
            android:id="@+id/view"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#000000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSelectedProducts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:listitem="@layout/item_productos_seleccionados" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelSelection"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:backgroundTint="#F9A71A"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/dialog_cancelar"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <ImageButton
            android:id="@+id/buttonDeleteSelectedItem"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#D0D0D0"
            android:contentDescription="@string/delete_selected_item_desc"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/buttonAcceptSelection"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:backgroundTint="#F9A71A"
            android:fontFamily="@font/advent_pro_semibold"
            android:text="@string/dialog_aceptar"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>

</LinearLayout>